syntax = "proto3";

package eth_client_call;
option go_package = "eth_client_call";

message ClientCallInterface {
    string command = 1;
    string payload = 2;
    string testnetId = 3;
}

message ClientCallRequest {
    ClientCallInterface callInterface = 1;
}

message ClientCallResponse {
    string result = 1;
}

service ClientCallService {
    rpc RunDeploy(ClientCallRequest) returns (stream ClientCallResponse) {};
}